Add profile image and body text.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <title>Amber DiNenna's Portfolio Project</title>
 </head>
-  <body>
+<body>
+  <h1>Hi! My name is Amber DiNenna.</h1>
+  <p><img src="img/me.jpeg" alt="A photo of my husband and I several New Year's ago."></p>
 
-  </body>
+  <p>I am just starting out in my programming career, but I am eager to learn and would love to share what I'm working on with you! </p>
+  <p>Please feel free to peruse the links below to check out some of my work thus far:</p>
+  <ul>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>
+
+
+
+</body>
 </html>
