Add emphasis to bio.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
   <p>My programmer friends have been trying to convince me for years to join their ranks. They boast comfortable salaries with loads of perks, rewarding work, and flexible schedules that increase their overall quality of life. Given their testimonies, my personal strengths, and what I've gleaned from my own research into the field, I am confident that a career in tech is the right path for me.</p>
 
   <h2>Personality-Wise</h2>
-  <
+  <p>Over the years, I have been fortunate enough to have many different kinds of jobs that have given me a wide range of skills. I know a little bit about a lot of things, which I feel makes me a more well-rounded person. I've been a hairstylist, a bartender, an events coordinator, and a general manager. I've worked in retail, corporate headquarters, and fine dining. I've gone to school for nursing, for cosmetology, and Biology. I've done data entry, human resources, and payroll. I've been certified to use Quickbooks, to sell food and alcohol, and to work as an unarmed security provider. In short, there isn't much that I'm <em>not</em> interested in.</p>
+  <p>Basically, if someone's willing to teach me, <strong>I'm always eager to learn.</strong></p>
+  <p><em>Currently</em>, my hobbies include:</p>
+  <ol>
+    <li>Being the sole source of entertainment for an infant.</li>
+    <li>Obsessively checking the forecast for any possibility of sunshine.</li>
+    <li>Dishes.</li>
+  </ol>
 
   </section>
 </body>
