--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <title>Amber DiNenna's Portfolio Project</title>
 </head>
 <body>
-  <div>
+  <div class="greeting">
     <h1>Hi! My name is Amber DiNenna.</h1>
     <p><img src="img/me.jpeg" alt="A photo of my husband and I several New Year's ago."></p>
   </div>
-  <section>
-    <div>
+
+  <section class="bio">
+    <div class="projects">
       <h1>All About Me</h1>
       <h2>Brass Tacks</h2>
       <p>I am just starting out in my programming career, but I am eager to learn and would love to share what I'm working on with you! </p>
@@ -22,7 +23,8 @@
         <li></li>
       </ul>
     </div>
-    <div>
+
+    <div class="background">
       <h2>Yesterday's News</h2>
       <p>I am confident my education and experience have prepared me well for my new career in programming. I recently graduated with my Associate of Science degree from Portland Community College. Before that, I had worked in the service industry for almost 20 years, the latter part of which was spent managing some of the best restaurants and bars in the City of Portland.</p>
       <p>I decided to switch gears after the onset of the pandemic, due to the seismic shift in stability to the industry. I went back to school, thinking I would join join the healthcare industry as a Registered Nurse with the hope that I could make a difference in the post-COVID world. However, after graduating with highest honors from PCC, I quickly discovered how nearly-impossible getting accepted into a reputable Nursing program is (even with exceptional grades) and even if I could get in, it would be a minimum of 4 years and tens of thousands of dollars before I could begin working.</p>
@@ -30,12 +32,13 @@
       <p>My programmer friends have been trying to convince me for years to join their ranks. They boast comfortable salaries with loads of perks, rewarding work, and flexible schedules that increase their overall quality of life. Given their testimonies, my personal strengths, and what I've gleaned from my own research into the field, I am confident that a career in tech is the right path for me.</p>
     </div>
 
-    <div>
+    <div class="skills">
       <h2>Personality-Wise</h2>
-      <p>Over the years, I have been fortunate enough to have many different kinds of jobs that have given me a wide range of skills. I know a little bit about a lot of things, which I feel makes me a more well-rounded person. I've been a hairstylist, a bartender, an events coordinator, and a general manager. I've worked in retail, corporate headquarters, and fine dining. I've gone to school for nursing, for cosmetology, and Biology. I've done data entry, human resources, and payroll. I've been certified to use Quickbooks, to sell food and alcohol, and to work as an unarmed security provider. In short, there isn't much that I'm <em>not</em> interested in.</p>
-      <p>Basically, if someone's willing to teach me, <strong>I'm always eager to learn.</strong></p>
+      <p>Over the years, I have been fortunate enough to have many different kinds of jobs that have given me a wide range of skills. I know a little bit about a lot of things, which I feel makes me a more well-rounded person. I've been a hairstylist, a bartender, an events coordinator, and a general manager. I've worked in retail, corporate headquarters, and fine dining. I've gone to school for nursing, for cosmetology, and Biology. I've done data entry, human resources, and payroll. I've been certified to use Quickbooks, to sell food and alcohol, and to work as an unarmed security provider. Basically, if someone's willing to teach me, <strong>I'm always eager to learn.</strong></p>
+      <p id="guys"><img src="img/guys.jpeg" alt="A nice photo of my husband and son at Mt. Tabor.">As for my personal life, at the top of my list of interests are my very cool husband and our even cooler son. We all like each other very much and it is not lost on me how very lucky I am. In a world that is on fire, they are my oasis. After them, I enjoy science, art, and the idea that I might be able to travel one day.</p>
       <p><em>Currently</em>, my hobbies include:</p>
       <ol>
+        <li>Not talking about myself.</li>
         <li>Being the sole source of entertainment for an infant.</li>
         <li>Obsessively checking the forecast for any possibility of sunshine.</li>
         <li>Dishes.</li>
