Add flex display to greeting div.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 <body>
   <section class="bio">
     <div class="greeting">
-     <h1>H e l l o !</h1>
+     <h1>HELLO THERE!</h1>
      <img src="img/me.jpeg" alt="A photo of my husband and I several New Year's ago." id="me">
-     <p id="big">My name is Amber DiNenna.</p>
+     <p>My name</p>
+     <p>is</p>
+     <p>Amber DiNenna</p>
 
     </div>
 
@@ -45,7 +47,6 @@
             <li>Obsessively checking the forecast for any possibility of sunshine.</li>
             <li>Dishes.</li>
           </ol>
-
       </div>
     </div>
   </section>
