Add cursive span to cool class.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     </div>
 
     <div class="contact">
-      <h2>CONTACT INFO</h2>
+      <h2>KNOWN WHEREABOUTS</h2>
+      <button>amberdinenna@gmail.com</button>
     </div>
 
     <div class="intro">
@@ -39,7 +40,7 @@
     <div class="skills">
       <h2>MY DEAL</h2>
       <p>Over the years, I have been fortunate enough to have many different kinds of jobs that have given me a wide range of skills. I know a little bit about a lot of things, which I feel makes me a more well-rounded person. I've been a hairstylist, a bartender, an events coordinator, and a general manager. I've worked in retail, corporate headquarters, and fine dining. I've gone to school for nursing, for cosmetology, and Biology. I've done data entry, human resources, and payroll. I've been certified to use Quickbooks, to sell food and alcohol, and to work as an unarmed security provider. Basically, if someone's willing to teach me, <strong>I'm always eager to learn.</strong></p>
-      <p><img src="img/guys.jpeg" alt="A nice photo of my husband and son at Mt. Tabor.">As for my personal life, at the top of my list of interests are my very cool husband and our even cooler son. We all like each other very much and it is not lost on me how very lucky I am. In a world that is on fire, they are my oasis. After them, I enjoy science, art, and the idea that I might be able to travel one day.</p>
+      <p><img src="img/guys.jpeg" alt="A nice photo of my husband and son at Mt. Tabor.">As for my personal life, at the top of my list of interests are my <span class="cool">very cool</span> husband and our <span class="cool">even cooler</span> son. We all like each other very much and it is not lost on me how very lucky I am. In a world that is on fire, they are my oasis. After them, I enjoy science, art, and the idea that I might be able to travel one day.</p>
       <div class="sidebar">
         <em>Currently</em>, my hobbies include:
           <ol>
