--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
       <p>I am just starting out in my programming career, but I am eager to learn and would love to share what I'm working on with you! </p>
       <p>Please feel free to peruse the links below to check out some of my work thus far:</p>
       <ul>
-       <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+       <li><a href="https://amber-dinenna.github.io/my-first-webpage/">My Favorite Places</a> is a page where I describe some choice spots (HTML/CSS used).</li>
+        <li><a href="https://github.com/Amber-DiNenna/boring-lecture">Boring Lecture</a> is a hub of intellectual delights (HTML/CSS used).</li>
+        <li><a href="amber-dinenna.github.io/animal-shelter">Animal Shelter</a> will make you forget everything you <em>thought</em> you knew about websites (HTML/CSS).</li>
       </ul>
     </div>
 
