BUGFIX: Broken links to boring lecture and animal shelter pages fixed.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <p>Please feel free to peruse the links below to check out some of my work thus far:</p>
       <ul>
        <li><a href="https://amber-dinenna.github.io/my-first-webpage/">My Favorite Places</a> is a page where I describe some choice spots (HTML/CSS used).</li>
-        <li><a href="https://github.com/Amber-DiNenna/boring-lecture">Boring Lecture</a> is a hub of intellectual delights (HTML/CSS used).</li>
-        <li><a href="amber-dinenna.github.io/animal-shelter">Animal Shelter</a> will make you forget everything you <em>thought</em> you knew about websites (HTML/CSS).</li>
+        <li><a href="https://amber-dinenna.github.io/boring-lecture/">Boring Lecture</a> is a hub of intellectual delights (HTML/CSS used).</li>
+        <li><a href="https://amber-dinenna.github.io/animal-shelter/">Animal Shelter</a> will make you forget everything you <em>thought</em> you knew about websites (HTML/CSS).</li>
       </ul>
     </div>
 
